Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,6 +155,7 @@ input, select, textarea {
 	h1 {
 		font-size: 2em;
 		line-height: 1.5em;
+		margin-bottom: 0.5em;
 	}
 
 	h2 {
